# hounddog-test-python-app

./: .env.example  .gitignore  README.md  app.py  database.py  main.py  pyproject.toml  setup_test_data.py  test_data.json
llm_examples/: anthropic_example.py  openai_example.py
pages/: 1_Patient_Management.py  2_Health_Metrics.py  3_Medical_Records.py  4_Analytics_Dashboard.py
scripts/: init_db.py  seed_db.py  test_db.py
utils/: data_manager.py  database.py  file_handler.py  visualization.py
